<resources>
    <string name="app_name">FidoFriend</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Fido Friend</string>
    <string name="nav_header_subtitle">Veterinary</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Profile</string>
    <string name="menu_slideshow">Appointments</string>
    <string name="menu_payment">Payment Method</string>
    <string name="menu_products">Products</string>
    <string name="menu_services">Services</string>
    <string name="menu_settings">Settings</string>
    <string name="ir_al_meeting">Ingresar al Meeting</string>
</resources>