<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.fidofriendsidebar.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.fidofriendsidebar.ui.profile.ProfileFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.fidofriendsidebar.ui.appointments.AppointmentsFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_payment"
        android:name="com.example.fidofriendsidebar.ui.payment.PaymentFragment"
        android:label="@string/menu_payment"
        tools:layout="@layout/fragment_payment" />
    <fragment
        android:id="@+id/nav_products"
        android:name="com.example.fidofriendsidebar.ui.products.ProductsFragment"
        android:label="@string/menu_products"
        tools:layout="@layout/fragment_payment" />
    <fragment
        android:id="@+id/nav_services"
        android:name="com.example.fidofriendsidebar.ui.services.ServicesFragment"
        android:label="@string/menu_services"
        tools:layout="@layout/fragment_payment" />
    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.fidofriendsidebar.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_payment" />
</navigation>